# data-engineering-on-gcp

./: earth.txt
01-introduction-to-data-engineering/: dogs.json  extract.py  load.sh
03-setting-up-data-lake-using-google-cloud-storage/: main.py  pyproject.toml
04-building-data-pipelines-with-apache-airflow-cloud-composer/mnt/dags/: avg_weekly_basket_model_training.py  breakfast_product_pipeline.py  dog_api_pipeline.py  dogs.json  my_first_dag.py  my_second_dag.py  smooth-command-410508-7707a057d25f.json
helpers/: pyproject.toml
myprject/: pyproject.toml
proj-sales-prediction/: load_data_to_gcs_then_bigquery.py  pipeline.conf  pyproject.toml  smooth-command-410508-bigquery-gcs.json  smooth-command-410508-f932f31596e9.json  upload_product_to_bigquery.py  upload_stores_to_bigquery.py  upload_transaction_to_bigquery.py
proj-titanic-prediction/: db.conf  import.py  main.py  pyproject.toml
proj-titanic-prediction/airflow/mnt/dags/: pim-titanic-load-from-gcs-to-bigquery.json  pim-titanic-load-to-gcs.json  titanic_from_mysql_to_bigquery_pipeline.py  titanic_survivor_predictor_modeling.py
